[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
env_logger = "0.9.0"
log = "0.4.17"
lz4 = "1.23.3"
rand = "0.8.5"
rayon = "1.5.2"
thiserror = "1.0.31"
